chapter-8/argo-rollouts/canary-release/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: notifications-service
