chapter-8/argo-rollouts/canary-release/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifications-service 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notifications-service
            port: 
              number: 80
